--- a/index.html
+++ b/index.html
@@ -1,258 +1,413 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>CD Player</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Now Playing</title>
 
 <style>
-:root{
-  --glow-white:#ffffff;
-  --glow-red:#ff4d4d;
-  --glow-cyan:#6fefff;
-  --glow-blue:#4fdcff; /* ← 青を見やすく調整 */
-  --glow-purple:#b06cff;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+  background: #111;
+  color: #fff;
 }
 
-body{
-  margin:0;
-  background:#000;
-  color:#fff;
-  font-family:sans-serif;
-  overflow:hidden;
+/* ===== ヘッダー ===== */
+.header {
+  position: fixed;
+  top: 12px;
+  right: 16px;
+  z-index: 40;
+}
+.menu-btn {
+  font-size: 26px;
+  cursor: pointer;
+}
+
+/* ===== プレイリスト ===== */
+.playlist {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 260px;
+  height: 100%;
+  background: #181818;
+  padding: 20px;
+  transition: right 0.35s ease;
+  z-index: 35;
+}
+.playlist.open { right: 0; }
+.track {
+  padding: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.track.active { background: #333; }
+.track span {
+  display: block;
+  font-size: 12px;
+  color: #aaa;
+}
+
+/* ===== メイン ===== */
+.container {
+  padding: 44px 15px 20px;
+  text-align: center;
+}
+
+.stage {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 20px auto;
+}
+
+/* ===== 動画 ===== */
+.video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 220px;
+  height: 124px;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index: 1;
+}
+.stage.cd-mini .video {
+  width: 360px;
+  height: 202px;
 }
 
 /* ===== CD ===== */
-#cd{
-  position:absolute;
-  top:50%;
-  left:50%;
-  width:260px;
-  height:260px;
-  border-radius:50%;
-  background:radial-gradient(#444 0%, #111 60%, #000 100%);
-  transform:translate(-50%,-50%);
-  transition:all .45s ease;
-  z-index:5;
+.cd {
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background: url("cd.jpeg") center/cover no-repeat;
+  animation: spin 10s linear infinite;
+  animation-play-state: paused;
+  cursor: pointer;
+  z-index: 5;
+  transition: all 0.45s ease;
 }
-#cd.spin{
-  animation:spin 3s linear infinite;
-}
-@keyframes spin{
-  from{transform:translate(-50%,-50%) rotate(0deg);}
-  to{transform:translate(-50%,-50%) rotate(360deg);}
-}
-#cd.mini{
-  width:120px;
-  height:120px;
-  top:40px;
-  left:40px;
-  transform:none;
+.cd.mini {
+  width: 58px;
+  height: 58px;
+  top: -60px;
+  left: -30px;
 }
 
-/* ===== VIDEO ===== */
-#videoWrap{
-  position:absolute;
-  inset:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  z-index:1;
-}
-iframe{
-  width:70vw;
-  height:39vw;
-  max-width:960px;
-  max-height:540px;
-  border:none;
-  transition:all .45s ease;
-}
-.miniVideo iframe{
-  width:85vw;
-  height:48vw;
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
-/* ===== CONTROLS ===== */
-#controls{
-  position:absolute;
-  bottom:40px;
-  width:100%;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:18px;
-  z-index:10;
+/* ===== 情報 ===== */
+.title { font-size: 18px; margin-top: 10px; }
+.artist { font-size: 14px; color: #aaa; }
+
+/* ===== コントロール ===== */
+.controls {
+  margin-top: 18px;
 }
 
-/* --- buttons --- */
-.btns{
-  display:flex;
-  gap:28px;
-  align-items:center;
-}
-svg{
-  width:44px;
-  height:44px;
-  fill:none;
-  stroke:#fff;
-  stroke-width:2.5;
-  cursor:pointer;
+.control-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 22px;
+  margin-bottom: 10px;
 }
 
-/* ===== PLAY GLOW ===== */
-#playWrap{
-  position:relative;
-}
-#glow{
-  position:absolute;
-  inset:-10px;
-  border-radius:50%;
-  filter:blur(18px);
-  opacity:0;
-  transition:opacity .3s;
-}
-.playing #glow{
-  opacity:1;
-  animation:glowCycle 6s linear infinite;
-}
-@keyframes glowCycle{
-  0%{background:var(--glow-white);}
-  20%{background:var(--glow-red);}
-  40%{background:var(--glow-cyan);}
-  60%{background:var(--glow-blue);}
-  80%{background:var(--glow-purple);}
-  100%{background:var(--glow-white);}
+.icon-btn,
+.play-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
-/* ===== SEEK ===== */
-#seek{
-  width:70%;
-  position:relative;
+.icon-btn svg {
+  width: 22px;
+  height: 22px;
+  fill: #aaa;
+  transition: fill 0.2s;
 }
-#track{
-  height:4px;
-  background:#333;
-  border-radius:2px;
+.icon-btn:hover svg {
+  fill: #fff;
 }
-#fill{
-  height:4px;
-  width:0%;
-  background:linear-gradient(90deg,#fff,#6fefff);
-  border-radius:2px;
+
+/* 再生ボタン */
+.play-btn {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#thumb{
-  position:absolute;
-  top:-4px;
-  width:12px;
-  height:12px;
-  border-radius:50%;
-  background:#fff;
-  transform:translateX(-50%);
+
+/* ===== 再生中の淡い照らし（青のみ視認性UP） ===== */
+@keyframes glowCycle {
+  0% {
+    box-shadow: 0 0 12px rgba(255,255,255,0.7),
+                0 0 28px rgba(255,255,255,0.35);
+  }
+  20% {
+    box-shadow: 0 0 14px rgba(255,80,80,0.75),
+                0 0 32px rgba(255,80,80,0.4);
+  }
+  40% {
+    box-shadow: 0 0 14px rgba(120,220,255,0.75),
+                0 0 32px rgba(120,220,255,0.4);
+  }
+  60% {
+    box-shadow: 0 0 16px rgba(100,180,255,0.85),
+                0 0 40px rgba(100,180,255,0.5);
+  }
+  80% {
+    box-shadow: 0 0 14px rgba(180,120,255,0.75),
+                0 0 32px rgba(180,120,255,0.4);
+  }
+  100% {
+    box-shadow: 0 0 12px rgba(255,255,255,0.7),
+                0 0 28px rgba(255,255,255,0.35);
+  }
 }
-.time{
-  display:flex;
-  justify-content:space-between;
-  font-size:12px;
-  color:#aaa;
+
+body.playing .play-btn {
+  animation: glowCycle 6s ease-in-out infinite;
+}
+
+.play-btn svg {
+  width: 26px;
+  height: 26px;
+  fill: #000;
+}
+
+/* ===== シークバー ===== */
+.seekbar {
+  width: 100%;
+  -webkit-appearance: none;
+  appearance: none;
+  height: 4px;
+  border-radius: 2px;
+  background: linear-gradient(
+    to right,
+    #fff 0%,
+    #fff var(--progress, 0%),
+    #444 var(--progress, 0%),
+    #444 100%
+  );
+}
+.seekbar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 12px;
+  height: 12px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+/* 時間 */
+.time {
+  font-size: 12px;
+  color: #aaa;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4px;
 }
 </style>
 </head>
 
 <body>
 
-<div id="videoWrap">
-  <iframe id="video" allow="autoplay"></iframe>
+<div class="header">
+  <div class="menu-btn" onclick="toggleList()">☰</div>
 </div>
 
-<div id="cd"></div>
+<div class="playlist" id="playlist"></div>
 
-<div id="controls">
-  <div class="btns">
-    <svg id="prev" viewBox="0 0 24 24">
-      <polygon points="15,5 15,19 5,12"/>
-      <rect x="16" y="5" width="3" height="14"/>
-    </svg>
-
-    <div id="playWrap">
-      <div id="glow"></div>
-      <svg id="play" viewBox="0 0 24 24">
-        <polygon id="playIcon" points="8,5 19,12 8,19"/>
-      </svg>
-    </div>
-
-    <svg id="next" viewBox="0 0 24 24">
-      <polygon points="9,5 9,19 19,12"/>
-      <rect x="5" y="5" width="3" height="14"/>
-    </svg>
+<div class="container">
+  <div class="stage">
+    <div id="player" class="video"></div>
+    <div id="cd" class="cd"></div>
   </div>
 
-  <div id="seek">
-    <div id="track">
-      <div id="fill"></div>
+  <div class="title" id="title"></div>
+  <div class="artist" id="artist"></div>
+
+  <div class="controls">
+    <div class="control-buttons">
+      <button class="icon-btn" onclick="prev()">
+        <svg viewBox="0 0 24 24"><path d="M6 5v14M18 6l-8 6 8 6z"/></svg>
+      </button>
+
+      <button class="play-btn" onclick="toggle()">
+        <svg id="playIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+        <svg id="pauseIcon" viewBox="0 0 24 24" style="display:none"><path d="M6 5h4v14H6zm8 0h4v14h-4z"/></svg>
+      </button>
+
+      <button class="icon-btn" onclick="next()">
+        <svg viewBox="0 0 24 24"><path d="M18 5v14M6 6l8 6-8 6z"/></svg>
+      </button>
     </div>
-    <div id="thumb"></div>
+
+    <input type="range" id="seekbar" class="seekbar" min="0" max="100">
     <div class="time">
-      <span id="cur">0:00</span>
-      <span id="dur">0:00</span>
+      <span id="current">0:00</span>
+      <span id="duration">0:00</span>
     </div>
   </div>
 </div>
 
+<script src="https://www.youtube.com/iframe_api"></script>
 <script>
-/* ===== album data ===== */
-const album=[
- {title:"Track 1",artist:"Artist",id:"VIDEO_ID1"},
- {title:"Track 2",artist:"Artist",id:"VIDEO_ID2"}
+const album = [
+  { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
+  { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" },
+  { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
 ];
-let idx=0;
 
-/* ===== state ===== */
-let playing=false;
-let duration=240;
-let current=0;
-let raf;
+let player, index = 0;
+let playing = false, seeking = false;
+let rotationTimer = null;
+let cdMini = false;
 
-/* ===== elements ===== */
-const cd=document.getElementById('cd');
-const video=document.getElementById('video');
-const fill=document.getElementById('fill');
-const thumb=document.getElementById('thumb');
-const cur=document.getElementById('cur');
-const dur=document.getElementById('dur');
-const playBtn=document.getElementById('playWrap');
+const cd = document.getElementById("cd");
+const playIcon = document.getElementById("playIcon");
+const pauseIcon = document.getElementById("pauseIcon");
+const seekbar = document.getElementById("seekbar");
+const playlist = document.getElementById("playlist");
+const stage = document.querySelector(".stage");
 
-/* ===== helpers ===== */
-const fmt=t=>`${Math.floor(t/60)}:${String(Math.floor(t%60)).padStart(2,'0')}`;
-
-/* ===== seek sync (完全同フレーム) ===== */
-function sync(){
-  if(!playing)return;
-  current+=1/60;
-  if(current>duration)current=duration;
-
-  const p=current/duration*100;
-  fill.style.width=p+"%";
-  thumb.style.left=p+"%";
-  cur.textContent=fmt(current);
-
-  raf=requestAnimationFrame(sync);
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player("player", {
+    videoId: album[0].id,
+    playerVars: { playsinline: 1, controls: 0 },
+    events: { onReady, onStateChange }
+  });
 }
 
-/* ===== play toggle ===== */
-playBtn.onclick=()=>{
-  playing=!playing;
-  document.body.classList.toggle('playing',playing);
-  cd.classList.toggle('spin',playing);
+function onReady() {
+  player.setVolume(0);
+  renderList();
+  updateInfo();
+  loop();
+}
 
-  if(playing){
-    raf=requestAnimationFrame(sync);
-  }else{
-    cancelAnimationFrame(raf);
-  }
+function onStateChange(e) {
+  if (e.data === YT.PlayerState.PLAYING) startRotation();
+  if (e.data === YT.PlayerState.ENDED) next();
+}
+
+function toggle() { playing ? pause() : play(); }
+
+function play() {
+  player.playVideo();
+  playing = true;
+  playIcon.style.display = "none";
+  pauseIcon.style.display = "block";
+  document.body.classList.add("playing");
+}
+
+function pause() {
+  player.pauseVideo();
+  stopRotation();
+  player.setVolume(0);
+  playing = false;
+  playIcon.style.display = "block";
+  pauseIcon.style.display = "none";
+  document.body.classList.remove("playing");
+}
+
+/* 回転 */
+function startRotation() {
+  if (cd.style.animationPlayState === "running") return;
+  cd.style.animationPlayState = "running";
+  clearTimeout(rotationTimer);
+  rotationTimer = setTimeout(() => player.setVolume(100), 300);
+}
+function stopRotation() {
+  cd.style.animationPlayState = "paused";
+  clearTimeout(rotationTimer);
+}
+
+/* CDタップ */
+cd.onclick = () => {
+  cdMini = !cdMini;
+  cd.classList.toggle("mini", cdMini);
+  stage.classList.toggle("cd-mini", cdMini);
 };
 
-/* ===== init ===== */
-dur.textContent=fmt(duration);
+/* シーク */
+seekbar.oninput = () => {
+  seeking = true;
+  seekbar.style.setProperty("--progress", seekbar.value + "%");
+};
+seekbar.onchange = () => {
+  player.seekTo((seekbar.value / 100) * player.getDuration(), true);
+  seeking = false;
+};
+
+function loop() {
+  if (player && player.getCurrentTime && !seeking) {
+    const cur = player.getCurrentTime();
+    const dur = player.getDuration();
+    const percent = (cur / dur) * 100;
+    seekbar.value = percent;
+    seekbar.style.setProperty("--progress", percent + "%");
+    current.textContent = format(cur);
+    duration.textContent = format(dur);
+  }
+  requestAnimationFrame(loop);
+}
+
+/* 曲操作 */
+function loadTrack(i) {
+  index = i;
+  stopRotation();
+  player.setVolume(0);
+  player.loadVideoById(album[index].id);
+  updateInfo();
+  renderList();
+  playing = false;
+  playIcon.style.display = "block";
+  pauseIcon.style.display = "none";
+  document.body.classList.remove("playing");
+}
+function next() { loadTrack((index + 1) % album.length); }
+function prev() { loadTrack((index - 1 + album.length) % album.length); }
+
+/* プレイリスト */
+function renderList() {
+  playlist.innerHTML = "<h3>アルバム</h3>";
+  album.forEach((t, i) => {
+    const div = document.createElement("div");
+    div.className = "track" + (i === index ? " active" : "");
+    div.innerHTML = `${t.title}<span>${t.artist}</span>`;
+    div.onclick = () => { loadTrack(i); toggleList(); };
+    playlist.appendChild(div);
+  });
+}
+
+function toggleList() {
+  playlist.classList.toggle("open");
+}
+
+function updateInfo() {
+  title.textContent = album[index].title;
+  artist.textContent = album[index].artist;
+}
+
+function format(sec) {
+  const m = Math.floor(sec / 60);
+  const s = Math.floor(sec % 60).toString().padStart(2, "0");
+  return `${m}:${s}`;
+}
 </script>
+
 </body>
 </html>
