--- a/index.html
+++ b/index.html
@@ -104,8 +104,32 @@ body {
 }
 
 /* ===== 情報 ===== */
-.title { font-size: 18px; margin-top: 10px; }
-.artist { font-size: 14px; color: #aaa; }
+.title {
+  font-size: 18px;
+  margin-top: 10px;
+}
+.artist {
+  font-size: 14px;
+  color: #aaa;
+}
+
+/* ▼ 曲名リンク用（追加・他未変更） */
+.title-link {
+  color: #fff;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  opacity: 0.85;
+}
+.title-link:hover {
+  opacity: 1;
+}
+.youtube-icon {
+  width: 14px;
+  height: 14px;
+  opacity: 0.6;
+}
 
 /* ===== コントロール ===== */
 .controls {
@@ -151,30 +175,12 @@ body {
 
 /* ===== 再生中の淡い照らし ===== */
 @keyframes glowCycle {
-  0% {
-    box-shadow: 0 0 12px rgba(255,255,255,0.7),
-                0 0 28px rgba(255,255,255,0.35);
-  }
-  20% {
-    box-shadow: 0 0 14px rgba(255,80,80,0.75),
-                0 0 32px rgba(255,80,80,0.4);
-  }
-  40% {
-    box-shadow: 0 0 14px rgba(120,220,255,0.75),
-                0 0 32px rgba(120,220,255,0.4);
-  }
-  60% {
-    box-shadow: 0 0 16px rgba(100,180,255,0.85),
-                0 0 40px rgba(100,180,255,0.5);
-  }
-  80% {
-    box-shadow: 0 0 14px rgba(180,120,255,0.75),
-                0 0 32px rgba(180,120,255,0.4);
-  }
-  100% {
-    box-shadow: 0 0 12px rgba(255,255,255,0.7),
-                0 0 28px rgba(255,255,255,0.35);
-  }
+  0% { box-shadow: 0 0 12px rgba(255,255,255,0.7),0 0 28px rgba(255,255,255,0.35); }
+  20% { box-shadow: 0 0 14px rgba(255,80,80,0.75),0 0 32px rgba(255,80,80,0.4); }
+  40% { box-shadow: 0 0 14px rgba(120,220,255,0.75),0 0 32px rgba(120,220,255,0.4); }
+  60% { box-shadow: 0 0 16px rgba(100,180,255,0.85),0 0 40px rgba(100,180,255,0.5); }
+  80% { box-shadow: 0 0 14px rgba(180,120,255,0.75),0 0 32px rgba(180,120,255,0.4); }
+  100% { box-shadow: 0 0 12px rgba(255,255,255,0.7),0 0 28px rgba(255,255,255,0.35); }
 }
 
 body.playing .play-btn {
@@ -236,7 +242,15 @@ body.playing .play-btn {
     <div id="cd" class="cd"></div>
   </div>
 
-  <div class="title" id="title"></div>
+  <!-- ▼ 曲名タップでYouTubeへ（ここだけ変更） -->
+  <div class="title">
+    <a id="titleLink" class="title-link" target="_blank" rel="noopener">
+      <span id="title"></span>
+      <svg class="youtube-icon" viewBox="0 0 24 24" fill="currentColor">
+        <path d="M23.5 6.2s-.2-1.6-.9-2.3c-.9-.9-1.9-.9-2.4-1C16.8 2.5 12 2.5 12 2.5s-4.8 0-8.2.4c-.5.1-1.5.1-2.4 1-.7.7-.9 2.3-.9 2.3S0 8 0 9.8v1.8c0 1.8.2 3.6.2 3.6s.2 1.6.9 2.3c.9.9 2.1.9 2.6 1 1.9.2 8.3.4 8.3.4s4.8 0 8.2-.4c.5-.1 1.5-.1 2.4-1 .7-.7.9-2.3.9-2.3s.2-1.8.2-3.6V9.8c0-1.8-.2-3.6-.2-3.6zM9.6 14.6V7.9l6.4 3.4-6.4 3.3z"/>
+      </svg>
+    </a>
+  </div>
   <div class="artist" id="artist"></div>
 
   <div class="controls">
@@ -282,6 +296,7 @@ const pauseIcon = document.getElementById("pauseIcon");
 const seekbar = document.getElementById("seekbar");
 const playlist = document.getElementById("playlist");
 const stage = document.querySelector(".stage");
+const titleLink = document.getElementById("titleLink");
 
 function onYouTubeIframeAPIReady() {
   player = new YT.Player("player", {
@@ -406,6 +421,7 @@ function toggleList() {
 function updateInfo() {
   title.textContent = album[index].title;
   artist.textContent = album[index].artist;
+  titleLink.href = "https://www.youtube.com/watch?v=" + album[index].id;
 }
 
 function format(sec) {
