--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@ body {
   color: #aaa;
 }
 
-/* ===== 曲名リンク（センター補正済） ===== */
+/* ▼ 曲名リンク用（追加・他未変更） */
 .title-link {
   color: #fff;
   text-decoration: none;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 6px;
   opacity: 0.85;
   position: relative;
 }
@@ -246,6 +245,7 @@ body.playing .play-btn {
     <div id="cd" class="cd"></div>
   </div>
 
+  <!-- ▼ 曲名タップでYouTubeへ（ここだけ変更） -->
   <div class="title">
     <a id="titleLink" class="title-link" target="_blank" rel="noopener">
       <span id="title"></span>
@@ -256,9 +256,183 @@ body.playing .play-btn {
   </div>
   <div class="artist" id="artist"></div>
 
-  <!-- 以下JS・HTMLは一切変更なし -->
+  <div class="controls">
+    <div class="control-buttons">
+      <button class="icon-btn" onclick="prev()">
+        <svg viewBox="0 0 24 24"><path d="M6 5v14M18 6l-8 6 8 6z"/></svg>
+      </button>
+
+      <button class="play-btn" onclick="toggle()">
+        <svg id="playIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+        <svg id="pauseIcon" viewBox="0 0 24 24" style="display:none"><path d="M6 5h4v14H6zm8 0h4v14h-4z"/></svg>
+      </button>
+
+      <button class="icon-btn" onclick="next()">
+        <svg viewBox="0 0 24 24"><path d="M18 5v14M6 6l8 6-8 6z"/></svg>
+      </button>
+    </div>
+
+    <input type="range" id="seekbar" class="seekbar" min="0" max="100">
+    <div class="time">
+      <span id="current">0:00</span>
+      <span id="duration">0:00</span>
+    </div>
+  </div>
 </div>
+
+<script src="https://www.youtube.com/iframe_api"></script>
+<script>
+const album = [
+  { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
+  { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" },
+  { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
+];
+
+let player, index = 0;
+let playing = false, seeking = false;
+let rotationTimer = null;
+let cdMini = false;
+
+const cd = document.getElementById("cd");
+const playIcon = document.getElementById("playIcon");
+const pauseIcon = document.getElementById("pauseIcon");
+const seekbar = document.getElementById("seekbar");
+const playlist = document.getElementById("playlist");
+const stage = document.querySelector(".stage");
+const titleLink = document.getElementById("titleLink");
+
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player("player", {
+    videoId: album[0].id,
+    playerVars: { playsinline: 1, controls: 0 },
+    events: { onReady, onStateChange }
+  });
+}
+
+function onReady() {
+  player.setVolume(0);
+  renderList();
+  updateInfo();
+  loop();
+}
+
+function onStateChange(e) {
+  if (e.data === YT.PlayerState.PLAYING) {
+    startRotation();
+    playing = true;
+    playIcon.style.display = "none";
+    pauseIcon.style.display = "block";
+    document.body.classList.add("playing");
+  }
+  if (e.data === YT.PlayerState.ENDED) next();
+}
+
+function toggle() { playing ? pause() : play(); }
+
+function play() {
+  player.playVideo();
+  playing = true;
+  playIcon.style.display = "none";
+  pauseIcon.style.display = "block";
+  document.body.classList.add("playing");
+}
+
+function pause() {
+  player.pauseVideo();
+  stopRotation();
+  player.setVolume(0);
+  playing = false;
+  playIcon.style.display = "block";
+  pauseIcon.style.display = "none";
+  document.body.classList.remove("playing");
+}
+
+/* 回転 */
+function startRotation() {
+  if (cd.style.animationPlayState === "running") return;
+  cd.style.animationPlayState = "running";
+  clearTimeout(rotationTimer);
+  rotationTimer = setTimeout(() => player.setVolume(100), 300);
+}
+function stopRotation() {
+  cd.style.animationPlayState = "paused";
+  clearTimeout(rotationTimer);
+}
+
+/* CDタップ */
+cd.onclick = () => {
+  cdMini = !cdMini;
+  cd.classList.toggle("mini", cdMini);
+  stage.classList.toggle("cd-mini", cdMini);
+};
+
+/* シーク */
+seekbar.oninput = () => {
+  seeking = true;
+  seekbar.style.setProperty("--progress", seekbar.value + "%");
+};
+seekbar.onchange = () => {
+  player.seekTo((seekbar.value / 100) * player.getDuration(), true);
+  seeking = false;
+};
+
+function loop() {
+  if (player && player.getCurrentTime && !seeking) {
+    const cur = player.getCurrentTime();
+    const dur = player.getDuration();
+    const percent = (cur / dur) * 100;
+    seekbar.value = percent;
+    seekbar.style.setProperty("--progress", percent + "%");
+    current.textContent = format(cur);
+    duration.textContent = format(dur);
+  }
+  requestAnimationFrame(loop);
+}
+
+/* 曲操作 */
+function loadTrack(i) {
+  index = i;
+  stopRotation();
+  player.setVolume(0);
+  player.loadVideoById(album[index].id);
+  updateInfo();
+  renderList();
+  playing = false;
+  playIcon.style.display = "block";
+  pauseIcon.style.display = "none";
+  document.body.classList.remove("playing");
+}
+function next() { loadTrack((index + 1) % album.length); }
+function prev() { loadTrack((index - 1 + album.length) % album.length); }
+
+/* プレイリスト */
+function renderList() {
+  playlist.innerHTML = "<h3>アルバム</h3>";
+  album.forEach((t, i) => {
+    const div = document.createElement("div");
+    div.className = "track" + (i === index ? " active" : "");
+    div.innerHTML = `${t.title}<span>${t.artist}</span>`;
+    div.onclick = () => { loadTrack(i); toggleList(); };
+    playlist.appendChild(div);
+  });
+}
+
+function toggleList() {
+  playlist.classList.toggle("open");
+}
+
+function updateInfo() {
+  title.textContent = album[index].title;
+  artist.textContent = album[index].artist;
+  titleLink.href = "https://www.youtube.com/watch?v=" + album[index].id;
+}
+
+function format(sec) {
+  const m = Math.floor(sec / 60);
+  const s = Math.floor(sec % 60).toString().padStart(2, "0");
+  return `${m}:${s}`;
+}
+</script>
 
 </body>
 </html>
-
